--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <script src="https://kit.fontawesome.com/ddc3ee268a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="d-flex bg-warning">
-        <h1>Hello world</h1>
-        <p>Hi there</p>
-        <i class="fab fa-instagram"></i>
-    </div> 
+    <div class="hero">
+        <p>👋 Hello, I'm</p>
+        <h1>Oksana Yaner-Meslem</h1>
+        <h2 class="mb-5">Front-end developer based in Canada</h2>
+        <div>
+            <a href="#" class="btn btn-branding">Contact me</a>
+        </div>
+    </div>
 </body>
 </html>
