--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   they live in Bookmarksgrove right at the coast of the Semantics, a
                   large language ocean. A small river named Duden flows by
                 </p>
-                <a href="#" class="btn btn-branding-outline"> Learn more </a>
+                <a href="about.html" class="btn btn-branding-outline"> Learn more </a>
               </div>
             </div>
           </div>
