added link to work page

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                     <h1 class="mb-4">Hi I am Oksana Yaner-Meslem</h1>
                     <h2 class="mb-4">Frontend Developer, based in Canada.</h2>
                     <p class="mb-5">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
-                    <a href="#" class="btn btn-branding"> See my projects </a>
+                    <a href="work.html" class="btn btn-branding"> See my projects </a>
                 </div>
             </div>
             <div class="col-md-6">
