--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Oksana Yaner-Meslem</h1>
         <h2 class="mb-5">Front-end developer based in Canada</h2>
         <div>
-            <a href="#" class="btn btn-branding">Contact me</a>
+            <a href="contact.html" class="btn btn-branding">Contact me</a>
         </div>
     </div>
     <p class="text-center m-5">
@@ -74,7 +74,7 @@
                   they live in Bookmarksgrove right at the coast of the Semantics, a
                   large language ocean. A small river named Duden flows by
                 </p>
-                <a href="" class="btn btn-branding-outline"> Learn more </a>
+                <a href="#" class="btn btn-branding-outline"> Learn more </a>
               </div>
             </div>
     </div>
