added navigation bar

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,17 @@
 </head>
 <body>
     <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="/"><img src="images/logo.png" alt="logo" class="logo d-none d-md-block"><img src="images/logo-small.jpg" alt="logo" class="logo d-block d-md-none"></a>
+            <ul>
+            <li><a href="home.html" class="active">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="container">
         <div class="row mt-5">
             <div class="about-section">
                 <h1 class="mb-5">Let's get in touch!</h1>
