--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <script src="https://kit.fontawesome.com/ddc3ee268a.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+      <a href="/"><img src="images/logo.png" alt="logo" class="logo d-none d-md-block"><img src="images/logo-small.jpg" alt="logo" class="logo d-block d-md-none"></a>
+      <ul>
+        <li><a href="home.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
     <div class="hero">
         <p>👋 Hello, I'm</p>
         <h1>Oksana Yaner-Meslem</h1>
