--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
                 <a href="#" class="btn btn-branding-outline"> Learn more </a>
               </div>
             </div>
+            <footer>
+              <div class="d-flex justify-content-between mb-5 d-none d-md-flex contact-box">
+                <div>
+                  <h4>Work Inquiry</h4>
+                  <p class="text-muted">Let's work together</p>
+                </div>
+                <div>
+                  <a href="contact.html" class="btn btn-branding"> Contact me </a>
+                </div>
+              </div>
+              <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:nadiroksana@gmail.com" class="email">nadiroksana@gmail.com</a>
+              </div>
+              <div class="social-links d-flex justify-content-center mb-5">
+                <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+              </div>
+            </footer>
     </div>
 </body>
 </html>
