--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Webdeveloper</title>
+    <title>Frontend Webdeveloper - Oksana Yaner-Meslem</title>
+    <meta name="description" content="Oksana is an experienced webdeveloper based in Canada">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,12 +18,12 @@
 <body>
   <div class="container">
     <nav class="d-flex justify-content-between">
-      <a href="/"><img src="images/logo.png" alt="logo" class="logo d-none d-md-block"><img src="images/logo-small.jpg" alt="logo" class="logo d-block d-md-none"></a>
+      <a href="index.html" title="Homepage"><img src="images/logo.png" alt="Oksana Logo" class="logo d-none d-md-block"><img src="images/logo-small.jpg" alt="logo" class="logo d-block d-md-none"></a>
       <ul>
-        <li><a href="/" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html" title="Home page" class="active">Home</a></li>
+        <li><a href="about.html" title="About Oksana">About</a></li>
+        <li><a href="work.html" title="Oksana's work">Work</a></li>
+        <li><a href="contact.html" title="Contact Oksana">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -31,7 +32,7 @@
         <h1>Oksana Yaner-Meslem</h1>
         <h2 class="mb-5">Front-end developer based in Canada</h2>
         <div>
-            <a href="contact.html" class="btn btn-branding">Contact me</a>
+            <a href="contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
         </div>
     </div>
     <p class="text-center m-5">
@@ -40,7 +41,7 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-              <img src="images/yogurt.png" class="img-fluid" alt="" />
+              <img src="images/yogurt.png" class="img-fluid" alt="yogurt project preview" />
             </div>
             <div class="col">
               <div class="project-desciption">
@@ -51,7 +52,7 @@
                   they live in Bookmarksgrove right at the coast of the Semantics, a
                   large language ocean. A small river named Duden flows by
                 </p>
-                <a href="about.html" class="btn btn-branding-outline"> Learn more </a>
+                <a href="work.html" class="btn btn-branding-outline"> Learn more </a>
               </div>
             </div>
           </div>
@@ -69,12 +70,12 @@
               </div>
             </div>
             <div class="col d-none d-lg-block">
-              <img src="images/weather.png" class="img-fluid" alt="" />
+              <img src="images/weather.png" class="img-fluid" alt="weather app preview" />
             </div>
           </div>
           <div class="row">
             <div class="col d-none d-lg-block">
-              <img src="images/dictionary.png" class="img-fluid" alt="" />
+              <img src="images/dictionary.png" class="img-fluid" alt="dictionary app preview" />
             </div>
             <div class="col">
               <div class="project-desciption">
@@ -85,27 +86,28 @@
                   they live in Bookmarksgrove right at the coast of the Semantics, a
                   large language ocean. A small river named Duden flows by
                 </p>
-                <a href="#" class="btn btn-branding-outline"> Learn more </a>
+                <a href="work.html" class="btn btn-branding-outline"> Learn more </a>
               </div>
             </div>
             <footer>
               <div class="d-flex justify-content-between mb-5 d-none d-md-flex contact-box">
                 <div>
-                  <h4>Work Inquiry</h4>
+                  <h3>Work Inquiry</h3>
                   <p class="text-muted">Let's work together</p>
                 </div>
                 <div>
-                  <a href="contact.html" class="btn btn-branding"> Contact me </a>
+                  <a href="contact.html" class="btn btn-branding" title="Contact Oksana"> Contact me </a>
                 </div>
               </div>
               <div class="d-flex justify-content-center mb-5">
-                <a href="mailto:nadiroksana@gmail.com" class="email">nadiroksana@gmail.com</a>
+                <a href="mailto:nadiroksana@gmail.com" class="email" title="Email Oksana">nadiroksana@gmail.com</a>
               </div>
               <div class="social-links d-flex justify-content-center mb-5">
-                <a href="" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
+                <a href="" target="_blank" title="Instagram Profile"><i class="fab fa-instagram"></i></a>
+                <a href="" target="_blank" title="Twitter Profile"><i class="fab fa-twitter"></i></a>
               </div>
+              <p class="text-center mt-4">This project was coded by Oksana and it is <a href="https://github.com/testokok/portfolio-project" target="_blank">open-sourced</a></p>
             </footer>
     </div>
 </body>
