--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 <a href="mailto:nadiroksana@gmail.com" class="email" title="Email Oksana">nadiroksana@gmail.com</a>
               </div>
               <div class="social-links d-flex justify-content-center mb-5">
-                <a href="" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
-                <a href="" target="_blank" title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-                <a href="" target="_blank" title="Twitter Profile"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/testokok" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
+                <a href="#" target="_blank" title="Instagram Profile"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" title="Twitter Profile"><i class="fab fa-twitter"></i></a>
               </div>
               <p class="text-center mt-4">This project was coded by Oksana and it is <a href="https://github.com/testokok/portfolio-project" target="_blank">open-sourced</a></p>
             </footer>
