--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
               </div>
               <div class="d-flex justify-content-center mb-5">
-                <a href="mailto:nadiroksana@gmail.com" class="email" title="Email Oksana">nadiroksana@gmail.com</a>
+                <a href="mailto:nadiroksana@gmail.com" class="email" title="Email Oksana">oksana@gmail.com</a>
               </div>
               <div class="social-links d-flex justify-content-center mb-5">
                 <a href="https://github.com/testokok" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
