--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <a href="#" target="_blank" title="Instagram Profile"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank" title="Twitter Profile"><i class="fab fa-twitter"></i></a>
               </div>
-              <p class="text-center mt-4">This project was coded by Oksana and it is <a href="https://github.com/testokok/portfolio-project" target="_blank">open-sourced</a></p>
+              <p class="text-center mt-4">This project was coded by Oksana, and is <a href="https://github.com/testokok/portfolio-project" target="_blank">open-sourced</a></p>
             </footer>
     </div>
 </body>
